<resources>
    <string name="app_name">P2WeatherChannel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">by Eric Grevillius</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sensor_values_text">Sensor values</string>
    <string name="temperature_text">Temperature</string>
    <string name="pressure_text">Pressure</string>
    <string name="humidity_text">Humidity</string>
    <string name="altitude_text">Altitude</string>
    <string name="api_values">API values</string>
    <string name="volley_text">Volley</string>
    <string name="async_task_text">AsyncTask</string>
    <string name="pressure_difference_text">Pressure difference</string>
    <string name="temperature_difference_text">Temperature difference</string>
    <string name="humidity_difference_text">Humidity difference</string>
    <string name="differences_text">Differences</string>
    <string name="weather_text">Weather</string>
    <string name="map_text">Map</string>
    <string name="sensors_text">Sensors</string>
    <string name="weather_api_text">Weather API</string>
    <string name="difference_text">Difference</string>
    <string name="pressure_sensor_not_available_text">Pressure sensor is not available!</string>
    <string name="temperature_sensor_not_available_text">Temperature sensor is not available!</string>
    <string name="humidity_sensor_not_available_text">Humidity sensor is not available!</string>
    <string name="altitude_sensor_not_available_text">Altitude sensor is not available!</string>
    <string name="cant_calculate_altitude_without_pressure_text">Can\'t calculate altitude without pressure!</string>
    <string name="cant_calculate_text">Can\'t calculate without sensors!</string>

    <string name="google_maps_key" translatable="false">AIzaSyBUrWhxtv8_q1URaZbV0iYN9w79aGECiHo</string>
</resources>
